--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   location: ^8.0.1
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
